# jdb

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build_all.sh  rust-toolchain.toml
.cargo/: config.toml
src/: debugger.rs  history.rs  lib.rs  main.rs  options.rs  process.rs  tui.rs
src/debugger/: mod.rs
src/process/: inferior.rs  mod.rs  register_info.rs  registers.rs
src/process/register_info/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
src/process/registers/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
src/process/stoppoint/: breakpoint_site.rs  mod.rs
src/tui/: mod.rs  render.rs
tests/: debugger_smoke.rs  fixtures.rs
tests/fixtures/: Cargo.toml
tests/fixtures/src/: main.rs
