[package]
name = "jdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5.15"
dirs = "6.0"
libc = "0.2.177"
log = "0.4"
memoffset = "0.9.1"
mio = { version = "1.1.0", features = ["os-ext"] }
nix = { version = "0.30", features = ["fs", "ptrace", "signal", "term"] }
ratatui = "0.29"
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-logger = { version = "0.17", features = ["tracing-support"] }
